language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/borrow_global_acquires_invalid_1.exp
error[E07003]: invalid operation, could create dangling a reference
  ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/borrow_global_acquires_invalid_1.move:7:9
  │
6 │         let x = borrow_global_mut<T1>(Signer::address_of(account));
  │                 -------------------------------------------------- It is still being mutably borrowed by this reference
7 │         acquires_t1(account);
  │         ^^^^^^^^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'

